# django-poetry

./: .gitignore  README.md  pyproject.toml
hello_app/: urls.py  views.py
src/: settings.py  urls.py
